--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/ArtistResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/ArtistResultView.xaml
@@ -3,18 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
-  <UserControl.Resources>
-    <BitmapImage x:Key="noartistimage" UriSource="/Resources/noartistimage.png"/>
-  </UserControl.Resources>
-
   <Grid>
     <ScrollViewer>
-      <ItemsControl  ItemsSource="{Binding FetchedArtists}">
+      <ItemsControl x:Name="Items">
         <ItemsControl.ItemContainerStyle>
           <Style>
             <Setter Property="FrameworkElement.Margin" Value="5"/>
@@ -25,39 +19,6 @@
             <UniformGrid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
           </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
-        <ItemsControl.ItemTemplate>
-          <DataTemplate>
-            <Border BorderThickness="1" BorderBrush="Black">
-              <Grid>
-                <Grid.RowDefinitions>
-                  <RowDefinition Height="Auto"/>
-                  <RowDefinition Height="5"/>
-                  <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <Image Grid.Row="0">
-                  <Image.Style>
-                    <Style TargetType="{x:Type Image}">
-                      <Setter Property="Source" Value="{Binding FetchedArtist.Image, TargetNullValue={StaticResource noartistimage}}"/>
-                    </Style>
-                  </Image.Style>
-                  <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="MouseLeftButtonDown">
-                      <cal:ActionMessage MethodName="Clicked"/>
-                    </i:EventTrigger>
-                  </i:Interaction.Triggers>
-                </Image>
-                <Label Grid.Row="2" Content="{Binding FetchedArtist.Name}" HorizontalAlignment="Center">
-                  <Label.ToolTip>
-                    <ToolTip>
-                      <TextBlock Text="{Binding FetchedArtist.Name}"/>
-                    </ToolTip>
-                  </Label.ToolTip>
-                </Label>
-              </Grid>
-            </Border>
-          </DataTemplate>
-        </ItemsControl.ItemTemplate>
       </ItemsControl>
     </ScrollViewer>
   </Grid>
