--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/ReleaseResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/ReleaseResultView.xaml
@@ -3,13 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" cal:Bind.Model="{Binding}">
+             d:DesignHeight="300" d:DesignWidth="300">
 
   <UserControl.Resources>
-    <BitmapImage x:Key="noalbumimage" UriSource="/Resources/noalbumimage.png"/>
     <BooleanToVisibilityConverter x:Key="boolToVis"/>
   </UserControl.Resources>
 
@@ -21,10 +18,10 @@
     </Grid.RowDefinitions>
 
     <Button x:Name="BackToArtist" Grid.Row="0" Content="Back To Artists" HorizontalAlignment="Left"
-            Visibility="{Binding FetchedReleaseThroughArtist, Converter={StaticResource boolToVis}}"/>
+            Visibility="{Binding FetchedThroughArtist, Converter={StaticResource boolToVis}}"/>
 
     <ScrollViewer Grid.Row="2">
-      <ItemsControl  ItemsSource="{Binding FetchedReleases}">
+      <ItemsControl x:Name="Items">
         <ItemsControl.ItemContainerStyle>
           <Style>
             <Setter Property="FrameworkElement.Margin" Value="5"/>
@@ -35,39 +32,6 @@
             <UniformGrid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
           </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
-        <ItemsControl.ItemTemplate>
-          <DataTemplate>
-            <Border BorderThickness="1" BorderBrush="Black">
-              <Grid>
-                <Grid.RowDefinitions>
-                  <RowDefinition Height="Auto"/>
-                  <RowDefinition Height="5"/>
-                  <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <Image Grid.Row="0">
-                  <Image.Style>
-                    <Style TargetType="{x:Type Image}">
-                      <Setter Property="Source" Value="{Binding FetchedRelease.Image, TargetNullValue={StaticResource noalbumimage}}"/>
-                    </Style>
-                  </Image.Style>
-                  <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="MouseLeftButtonDown">
-                      <cal:ActionMessage MethodName="Clicked"/>
-                    </i:EventTrigger>
-                  </i:Interaction.Triggers>
-                </Image>
-                <Label Grid.Row="2" Content="{Binding FetchedRelease.Name}" HorizontalAlignment="Center">
-                  <Label.ToolTip>
-                    <ToolTip>
-                      <TextBlock Text="{Binding FetchedRelease.Name}"/>
-                    </ToolTip>
-                  </Label.ToolTip>
-                </Label>
-              </Grid>
-            </Border>
-          </DataTemplate>
-        </ItemsControl.ItemTemplate>
       </ItemsControl>
     </ScrollViewer>
   </Grid>
