--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/SetlistFMScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/SetlistFMScrobbleView.xaml
@@ -22,15 +22,6 @@
     </ObjectDataProvider>
 
     <converters:DataTypeConverter x:Key="DataTypeConv"/>
-
-    <Style TargetType="FrameworkElement" x:Key="SetlistResultPageVisibilityStyle">
-      <Setter Property="Visibility" Value="Collapsed"/>
-      <Style.Triggers>
-        <DataTrigger Binding="{Binding ActiveItem, Converter={StaticResource DataTypeConv}}" Value="{x:Type data:SetlistResultViewModel}">
-          <Setter Property="Visibility" Value="Visible"/>
-        </DataTrigger>
-      </Style.Triggers>
-    </Style>
   </UserControl.Resources>
   <Grid>
     <Grid.RowDefinitions>
@@ -69,8 +60,30 @@
 
     <Button x:Name="Search" Grid.Row="0" Grid.Column="12" Content="Search"/>
 
-    <Label Grid.Row="2" Grid.Column="0" Content="Setlist Result Page:" Style="{StaticResource SetlistResultPageVisibilityStyle}"/>
-    <xctk:IntegerUpDown Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left" Value="{Binding SetlistResultPage}" Minimum="1" Style="{StaticResource SetlistResultPageVisibilityStyle}"/>
+    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="13">
+      <Grid.Style>
+        <Style TargetType="Grid">
+          <Setter Property="Visibility" Value="Collapsed"/>
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding ActiveItem, Converter={StaticResource DataTypeConv}}" Value="{x:Type data:SetlistResultViewModel}">
+              <Setter Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </Grid.Style>
+
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
+        <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
+
+      <Button x:Name="BackToArtists" Grid.Column="0" Content="Back To Artists"/>
+      <Label Grid.Column="2" Content="Setlist Result Page:"/>
+      <xctk:IntegerUpDown Grid.Column="4" HorizontalAlignment="Left" Value="{Binding SetlistResultPage}" Minimum="1"/>
+    </Grid>
 
     <ContentControl x:Name="ActiveItem" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="13">
       <ContentControl.Style>
