--- a/Last.fm-Scrubbler-WPF/App.xaml
+++ b/Last.fm-Scrubbler-WPF/App.xaml
@@ -18,7 +18,7 @@
           </Style>
 
           <Style x:Key="ScrobbableObjectListViewStyle" TargetType="ListView">
-            <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
+            <!--<Setter Property="ScrollViewer.CanContentScroll" Value="False"/>-->
             <Setter Property="SelectionMode" Value="Extended"/>
             <Setter Property="ItemContainerStyle">
               <Setter.Value>
