--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
+             xmlns:local="clr-namespace:Scrubbler.Scrobbling.Data"
              xmlns:scrobbling="clr-namespace:Scrubbler.Scrobbling"
              xmlns:scrub="clr-namespace:Scrubbler"
              mc:Ignorable="d"
@@ -32,8 +33,8 @@
       <scrobbling:SelectScrobblesControl Grid.Row="0" Grid.Column="2"/>
     </Grid>
 
-    <ListView Grid.Row="2" VerticalAlignment="Stretch" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True" Style="{StaticResource ScrobbableObjectListViewStyle}">
-      <ListView.View>
+    <local:ScrobbableObjectListView Grid.Row="2" VerticalAlignment="Stretch" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True" Style="{StaticResource ScrobbableObjectListViewStyle}">
+      <local:ScrobbableObjectListView.View>
         <GridView>
           <GridViewColumn Header="Scrobble?" scrub:GridViewSort.PropertyName="ToScrobble">
             <GridViewColumn.CellTemplate>
@@ -77,7 +78,7 @@
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
         </GridView>
-      </ListView.View>
-    </ListView>
+      </local:ScrobbableObjectListView.View>
+    </local:ScrobbableObjectListView>
   </Grid>
 </UserControl>
