--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/CSVScrobbleView.xaml
@@ -8,6 +8,7 @@
              xmlns:local="clr-namespace:Scrubbler.Scrobbling.Scrobbler"
              xmlns:scrub="clr-namespace:Scrubbler"
              xmlns:scrobbling="clr-namespace:Scrubbler.Scrobbling"
+             xmlns:data="clr-namespace:Scrubbler.Scrobbling.Data"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="500" Style="{StaticResource EnableControlsStyle}">
 
@@ -62,8 +63,8 @@
 
     <scrobbling:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
-    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True" Style="{StaticResource ScrobbableObjectListViewStyle}">
-      <ListView.View>
+    <data:ScrobbableObjectListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True" Style="{StaticResource ScrobbableObjectListViewStyle}">
+      <data:ScrobbableObjectListView.View>
         <GridView>
           <GridViewColumn Header="Scrobble?" scrub:GridViewSort.PropertyName="ToScrobble">
             <GridViewColumn.CellTemplate>
@@ -115,8 +116,8 @@
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
         </GridView>
-      </ListView.View>
-    </ListView>
+      </data:ScrobbableObjectListView.View>
+    </data:ScrobbableObjectListView>
 
     <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9">
       <Grid.RowDefinitions>
