--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FriendScrobbleView.xaml
@@ -6,6 +6,7 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:scrobbling="clr-namespace:Scrubbler.Scrobbling"
              xmlns:scrub="clr-namespace:Scrubbler"
+             xmlns:data="clr-namespace:Scrubbler.Scrobbling.Data"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" Style="{StaticResource EnableControlsStyle}">
 
@@ -53,9 +54,9 @@
 
     <scrobbling:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
-    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" VerticalAlignment="Stretch" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True"
+    <data:ScrobbableObjectListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" VerticalAlignment="Stretch" ItemsSource="{Binding Scrobbles}" scrub:GridViewSort.AutoSort="True"
               Style="{StaticResource ScrobbableObjectListViewStyle}">
-      <ListView.View>
+      <data:ScrobbableObjectListView.View>
         <GridView>
           <GridViewColumn Header="Scrobble?" scrub:GridViewSort.PropertyName="ToScrobble">
             <GridViewColumn.CellTemplate>
@@ -106,8 +107,8 @@
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
         </GridView>
-      </ListView.View>
-    </ListView>
+      </data:ScrobbableObjectListView.View>
+    </data:ScrobbableObjectListView>
 
     <scrobbling:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9"/>
   </Grid>
