Make scrobbles editable

--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/TrackResultView.xaml
@@ -59,21 +59,21 @@
           <GridViewColumn Header="Artist" scrub:GridViewSort.PropertyName="ArtistName">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label Grid.Column="4" VerticalAlignment="Center" Content="{Binding ArtistName}"/>
+                <TextBox Grid.Column="4" VerticalAlignment="Center" Text="{Binding ArtistName}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
           <GridViewColumn Header="Release Title" scrub:GridViewSort.PropertyName="AlbumName">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label Grid.Column="4" VerticalAlignment="Center" Content="{Binding AlbumName}"/>
+                <TextBox Grid.Column="4" VerticalAlignment="Center" Text="{Binding AlbumName}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
           <GridViewColumn Header="Track Title" scrub:GridViewSort.PropertyName="TrackName">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label Grid.Column="4" VerticalAlignment="Center" Content="{Binding TrackName}"/>
+                <TextBox Grid.Column="4" VerticalAlignment="Center" Text="{Binding TrackName}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
