--- a/Last.fm-Scrubbler-WPF/Login/LoginView.xaml
+++ b/Last.fm-Scrubbler-WPF/Login/LoginView.xaml
@@ -6,7 +6,7 @@
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
-        Title="Login" Height="180" Width="180" Icon="..\Resources\scrubbler_64.ico" ResizeMode="NoResize">
+        Title="Login" Height="180" Width="180" Icon="..\Resources\scrubbler_64.ico" ResizeMode="NoResize" Style="{StaticResource EnableControlsStyle}">
 
   <Grid FocusManager.FocusedElement="{Binding ElementName=usernameTextBox}">
     <Grid.RowDefinitions>
@@ -34,7 +34,7 @@
     <Label Grid.Row="5" Grid.Column="1" HorizontalAlignment="Center" Content="Password"/>
     <PasswordBox Grid.Row="7" Grid.Column="1" x:Name="passwordBox"/>
 
-    <Button Grid.Row="9" Grid.Column="1" HorizontalAlignment="Center" Content="Login" Style="{StaticResource EnableControlsStyle}">
+    <Button Grid.Row="9" Grid.Column="1" HorizontalAlignment="Center" Content="Login">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
           <cal:ActionMessage MethodName="Login">
